--- a/dropzone-dark.html
+++ b/dropzone-dark.html
@@ -1,23 +1,22 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="assets/scss/style.css">
-<form class="dropzone-box">
+<link rel="stylesheet" href="assets/scss/style.scss">
+
+<form class="dropzone-box-dark">
     <h2>Upload and attach files</h2>
-    <p>
-        Attach files to this project
-    </p>
-    <div class="dropzone-area">
+    <p>Click to upload or drag and drop</p>
+    <div class="dropzone-area-dark">
         <div class="file-upload-icon">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-cloud-upload" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                    <path d="M14 3v4a1 1 0 0 0 1 1h4" />
-                    <path d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z" />
+                    <path d="M7 18a4.6 4.4 0 0 1 0 -9a5 4.5 0 0 1 11 2h1a3.5 3.5 0 0 1 0 7h-1" />
+                    <path d="M9 15l3 -3l3 3" />
+                    <path d="M12 12l0 9" />
                 </svg>
         </div>
-        <p>Click to upload or drag and drop</p>
         <input type="file" required id="upload-file" name="uploaded-file">
-        <p class="message">No Files Selected</p>
+        <p class="file-info">No Files Selected</p>
     </div>
     <div class="dropzone-actions">
         <button type="reset">
@@ -29,4 +28,4 @@
     </div>
 </form>
 
-<script src="assets/js/main.js"></script>
+<script src="assets/js/dropzonedark.js"></script>
