--- a/dropzone-dark.html
+++ b/dropzone-dark.html
@@ -1,7 +1,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="assets/scss/style.scss">
+<link rel="stylesheet" href="assets/scss/style.css">
 
 <form class="dropzone-box-dark">
     <h2>Upload and attach files</h2>
