--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     <details>
       <summary>Tables</summary>
       <div class="content">
-        <a href="">Table 1</a>
-        <a href="">Table 2</a>
+        <a href="tables/table-1/tables.html">Table 1</a>
+        <a href="tables/table-2/table-1.html">Table 2</a>
       </div>
     </details>
     <details>
@@ -62,14 +62,14 @@
     <details>
       <summary>Dropzone</summary>
       <div class="content">
-        <a href="">Dropzone 1</a><br />
-        <a href="">Dropzone 2</a>
+        <a href="dropzone/dark/dropzone-dark.html">Dropzone dark</a>
+        <a href="dropzone/normal/dropzone.html">Dropzone normal</a>
       </div>
     </details>
     <details>
         <summary>Loaders</summary>
         <div class="content">
-          <a href="">Loaders 1</a><br />
+          <a href="loaders/bounce-loader/bounce-loader.html">Bounce Loader</a>
           <a href="">Loaders 2</a>
         </div>
       </details>
@@ -97,8 +97,50 @@
       <details>
         <summary>Cards</summary>
         <div class="content">
-          <a href="">Card 1</a><br />
-          <a href="">Card 2</a>
+          <a href="cards/card-rise/card-rise.html">Card Rise</a>
+          <a href="cards/card-1/index.html">Card 1</a>
+          <a href="cards/card-2/index.html">Card 2</a>
+          <a href="cards/card-3/index.html">Card 3</a>
+          <a href="cards/card-4/index.html">Card 4</a>
+          <a href="cards/card-7/index.html">Card 5</a>
+          <a href="cards/card-8/index.html">Card 6</a>
+        </div>
+      </details>
+      <details>
+        <summary>Accordions</summary>
+        <div class="content">
+          <a href="accordions/accordion-1/index.html">Accordion 1</a>
+        </div>
+      </details>
+      <details>
+        <summary>Carousels</summary>
+        <div class="content">
+          <a href="carousels/carousel-2/index.html">Carousel 1</a>
+        </div>
+      </details>
+      <details>
+        <summary>Dashboard Blocks</summary>
+        <div class="content">
+          <a href="dashboards/dashboard-1/index.html">Dashboard 1</a>
+        </div>
+      </details>
+      <details>
+        <summary>Dropdowns</summary>
+        <div class="content">
+          <a href="dropdowns/dropdown-1/index.html">Dropdowns 1</a>
+          <a href="dropdowns/dropdown-2/index.html">Dropdowns 2</a>
+          <a href="dropdowns/dropdown-3/index.html">Dropdowns 3</a>
+        </div>
+      </details>
+      <details>
+        <summary>Footers</summary>
+        <div class="content">
+          <a href="footers/footer-1/index.html">Footer 1</a>
+          <a href="footers/footer-2/index.html">Footer 2</a>
+          <a href="footers/footer-3/index.html">Footer 3</a>
+          <a href="footers/footer-4/index.html">Footer 4</a>
+          <a href="footers/footer-5/index.html">Footer 5</a>
+          <a href="footers/footer-6/index.html">Footer 6</a>
         </div>
       </details>
   </body>
